@@ -1,3 +1,11 @@
+2006-05-23  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_RelationView.py: finish shading
+	* src/GrampsDb/_DbUtils.py: add birth/death index set funcion
+	* src/Editors/_EditPerson.py: birth/death index fixes
+	* src/DisplayTabs/_PersonEventEmbedList.py: birth/death index fixes
+	* src/GrampsWidgets.py: shading fixes
+	* src/DisplayModels/_PeopleModel.py: birth/death index fixes
+
 2006-05-23  Alex Roitman  <shura@gramps-project.org>
 	* src/Utils.py (probably_alive): Adapt to new birth/death refs.
 
